# nlp-lecture

./: .gitignore  Continuous Bag of Words.ipynb  From words to vectors.ipynb  LICENSE  README.md  Tokenization for transformers.ipynb  pyproject.toml
