[project]
name = "nlp-lecture"
version = "0.1.0"
description = "Lecture notes and examples for nlp-lecture at HSRT (Reutlingen University)"
authors = [
    {name = "arrrrrmin", email = "info@dotarmin.info"},
]
dependencies = [
    "jupyterlab>=4.1.6",
    "numpy>=1.26.4",
    "scikit-learn>=1.4.2",
    "matplotlib>=3.8.4",
    "torch>=2.2.2",
    "transformers>=4.40.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
